Fix dismiss button on small screens

--- a/src/app/welcome/welcome.styl
+++ b/src/app/welcome/welcome.styl
@@ -17,6 +17,7 @@
     width: 42px;
     height: @width;
     background: rgba(0, 0, 0, 0.3);
+    z-index: 30;
 
     &::after {
       content: '';
@@ -42,6 +43,7 @@
   max-width: 650px;
   margin: 0 auto;
   position: relative;
+  z-index: 10;
 
   h3 {
     line-height: 1.25em;
